a representation of me was added to participants

--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -2,3 +2,7 @@
   image: /assets/images/MattiNelimarkka.jpeg
   bio: "Matti Nelimarkka leads the Helsinki Social Computing Group, an interdisciplinary group examining both computers and society. They explore digital democracy and politics in the digital era as well as computational techniques in social sciences, especially workflows and connections between social science theories and code. He is affiliated with the Faculty of Social Science, University of Helsinki, Department of Computer Science, Aalto University and Futurice, a Finnish software consultancy. He is about to publish a new computational social science text book Coding Social Science via SAGE Publishing."
   website: http://me.mante.li
+- name: Faeze Ghorbanpour
+  image: /assets/images/Faeze_Ghorbanpour.jpeg
+  bio: "Faeze Ghorbanpour is a research assistant at Sharif University of Technology, Iran. Her research focuses on analyzing social media and detecting fake news. Faeze's research interests include natural language processing, computational social sciences, and digital humanities. She received her master's degree from Sharif University in computer engineering and currently works for an artificial intelligence company in Iran as a machine learning specialist."
+  website: https://faezeghorbanpour.github.io/
