--- a/_data/2022/korea/participants.yml
+++ b/_data/2022/korea/participants.yml
@@ -1,1 +1,55 @@
-- name:
+- name: Jeon June
+  image: /assets/images/jeon_june.png
+  bio: June Jeon is an assistant professor of sociology at Chungnam National University (CNU), Republic of Korea. He is a qualitative ethnographer and theorist, specialized in sociology science, technology, and environment. His recent research interests include computational large-scale qualitative analysis on varieties of inequalities in scientific knowledge production. June received Ph.D. in sociology at the University of Wisconsin-Madison and has published in Social Studies of Science, New Media & Society, Agriculture & Human Values, among other journals. 
+
+- name: Taesoo Song  
+  image: /assets/images/taesoo_song.png
+  bio: Taesoo Song (he/him) is a Ph.D. Student in City and Regional Planning at UC Berkeley. He is broadly interested in the issues of housing policy, neighborhood change, and migration, particularly in the context of high-opportunity and high-cost urban areas.
+  website: https://quilt-golf-827.notion.site/Taesoo-Song-d2e58c333f5e49e1b48dbeb606ac3bd8
+
+- name: Sevde Arpaci Ayhan  
+  image: /assets/images/sevde_arpaci.png
+  bio: Sevde Arpaci Ayhan is a PhD candidate in international studies at Seoul National University. Her specialization is development economics. Currently she develops three essays dissertation on green productivity, innovation and growth. She utilizes computational methods to conduct empirical research. She is particularly interested in econometrics, machine learning and artificial intelligence for policy-making world. She also teaches a quantitative methods course at Sookmyung Women's University.
+  
+- name: Minjin Chae 
+  image: /assets/images/minjin_chae.png
+  bio: Minjin Chae is a PhD student in sociology at Harvard. Her current research examines the role of worker bargaining power in providing workers with more control over their work schedules and hours. More broadly, she is interested in identifying the opportunities and risks brought by ongoing labor market transformation (e.g., automation) for employees’ personal/family life and their variations across gender, race/ethnicity, and class. She hopes to explore the relationship between occupational requirements, organizational practices, and working conditions using the online job postings and reviews data. 
+
+- name: Yuki Asahina 
+  image: /assets/images/yuki_asahina.png
+  bio: Yuki Asahina is Assistant Professor in the Graduate School of International and Area Studies at Hankuk University of Foreign Studies in Seoul, South Korea, where he teaches about Japanese society, inequality, and qualitative research methods. He received his PhD in sociology from the University of Hawai‘i at Mānoa and was previously a postdoctoral fellow at the Reischauer Institute of Japanese Studies, and an affiliate of the Weatherhead Research Cluster on Comparative Inequality and Inclusion at Harvard University. Yuki’s research interests include social inequality and political sociology with a particular focus on East Asia. His research has appeared or is forthcoming in Sociology, Politics&Society, Journal of Contemporary Asia, and Contemporary Japan, among other journals.
+  website: https://www.yukiasa.com
+ 
+- name: Soyeon Jeon
+  image: /assets/images/soyeon_jeon.png
+  bio: Soyeon Jeon is Master's Student, Department of Political Science and International Relations, Seoul National University. Her research interests lie in analyzing the public opinion in politics using advanced technical methodology. She aims to examine new media’s impact on public opinion formation and political persuasion. She also investigates how emotion and political sophistication take part in political persuasion of the polarized through statistics-based survey and experimental research methods. She will join as a Ph.D. Student, Department of Political Science, Washington University in St. Louis starting Fall, 2022.
+  website: https://river-jeon.github.io/
+
+- name: Daehyun Kim
+  image: /assets/images/daehyun_kim.png
+  bio: Daehyun Kim is a Ph.D. student in Management at the Korea Advanced Institute of Science and Technology (KAIST). His research focuses on how the new wave of digitalization affects an individual's decision to enter entrepreneurship. In more detail, He is interested in expanding our understanding of 1) the entry of online matching platforms and entrepreneurship and 2) AI exposure and necessity-driven entrepreneurship.
+
+- name: Hao-Yun Lee 
+  image: /assets/images/haoyun_lee.png
+  bio: Hao-Yun Lee is a master’s student at the Graduate School of Culture Technology, KAIST. Her research interests lie in the field of user research. She received her bachelor's degree in industrial design from National Cheng Kung University, Taiwan.
+
+- name: Jennifer Noh 
+  image: /assets/images/jennifer_noh.png
+  bio: Jennifer Noh is a PhD candidate at the Department of Psychiatry, University of Cambridge. Her PhD research focuses on the development of a mobile health-tracking system which can assess and predict the health and wellbeing of people with intellectual disabilities. ​To achieve this,  she aims to collate and analyse different sets of physiological and psychosocial data obtained from both smartphones and wearable wrist sensors. Before starting her PhD, she received her bachelor’s degree at York University (Canada) and master's degree from University College London (UK).
+
+- name: Wenyuan (Sophia) Lu 
+  image: /assets/images/wenyuan_lu.JPG
+  bio: Wenyuan (Sophia) Lu is the second-year global master student, KDI School of public policy and management/ Evans Public policy School, University of Washington.  Her research interests lie in economics history, labor economics and development economics. The current research topics focus on economics history about gender, human capital and early industrialization. She desires to utilize more computational science knowledge to solve the problems in the historical data collection and historical newspaper text analysis.
+
+- name: Kadir Jun Ayhan 
+  image: /assets/images/kadir_ayhan.png
+  bio: Kadir Jun Ayhan, Ph.D., is Assistant Professor of International Relations at Ewha Womans University Graduate School of International Studies. His main research interests include public diplomacy, power in world politics, and Korean foreign policy. Ayhan serves as Editor-in-Chief for Journal of Public Diplomacy. He has been serving as a member of the National Unity Committee under the Korean President(-elect) since April 2022. Ayhan regularly consults for governmental public diplomacy projects in Korea. He holds a Ph.D. (2016) and M.I.S. (2010) from Seoul National University Graduate School of International Studies and a Bachelor of Commerce (2008) from The University of Auckland. He has published articles in International Studies Perspectives, Korea Observer, Politics & Policy, and Place Branding and Public Diplomacy, among others.
+  website: https://cms.ewha.ac.kr/user/ayhan/
+  
+- name: Miri Kim 
+  image: /assets/images/miri_kim.png
+  bio: Miri Kim is a Ph.D. candidate in economics at Korea university. Her research is focused on microeconometrics and panel data models both empirically and theoretically. She is also interested in utilizing big data and artificial intelligence in econometric analysis, especially in causal inference.
+
+- name: Jisung Yoon 
+  image: /assets/images/jisung_yoon.png
+  bio: Jisung Yoon is Ph.D. Candidate in the industrial and management engineering at Pohang University of Science and Technology. After graduation, he will be joining the Kellogg School of Management at Northwestern University, and the Northwestern Institute on Complex Systems (NICO) as a Postdoctoral Fellow. His research focuses on the development and application of machine learning methods for network data, practically in the area of computational social science. In particular, I have been studying questions about innovation and human mobility in the concept of Science of Science.
