--- a/_data/2022/korea/participants.yml
+++ b/_data/2022/korea/participants.yml
@@ -1,5 +1,5 @@
 - name: Jeon June
-  image: /assets/images/jeon_june.png
+  image: /assets/images/jeon_june.jpg
   bio: June Jeon is an assistant professor of sociology at Chungnam National University (CNU), Republic of Korea. He is a qualitative ethnographer and theorist, specialized in sociology science, technology, and environment. His recent research interests include computational large-scale qualitative analysis on varieties of inequalities in scientific knowledge production. June received Ph.D. in sociology at the University of Wisconsin-Madison and has published in Social Studies of Science, New Media & Society, Agriculture & Human Values, among other journals. 
 
 - name: Taesoo Song  
