--- a/_data/2022/korea/participants.yml
+++ b/_data/2022/korea/participants.yml
@@ -33,7 +33,7 @@
   image: /assets/images/haoyun_lee.png
   bio: Hao-Yun Lee is a master’s student at the Graduate School of Culture Technology, KAIST. Her research interests lie in the field of user research. She received her bachelor's degree in industrial design from National Cheng Kung University, Taiwan.
 
-- name: Jennifer Noh 
+- name: Jennifer (Jung Min) Noh 
   image: /assets/images/jennifer_noh.png
   bio: Jennifer Noh is a PhD candidate at the Department of Psychiatry, University of Cambridge. Her PhD research focuses on the development of a mobile health-tracking system which can assess and predict the health and wellbeing of people with intellectual disabilities. ​To achieve this,  she aims to collate and analyse different sets of physiological and psychosocial data obtained from both smartphones and wearable wrist sensors. Before starting her PhD, she received her bachelor’s degree at York University (Canada) and master's degree from University College London (UK).
 
