--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -1,3 +1,8 @@
+- name: Vissého Adjiwanou
+  image: /2019/capetown/images/Visseho.jpg
+  bio: "<p align='justify'>Vissého Adjiwanou is a professor of demography and quantitative and computational methods in the Department of Sociology at the Université du Québec à Montréal (UQAM), and adjunct professor at the Department of Demography (Université de Montréal). He directs the lab on quantitative and computational social science, aiming to use computational approaches and methods in population studies in sub-Saharan Africa. His primary research focuses on population issues in sub-Saharan Africa and Canada, including family dynamics, gender inequality and reproductive health, and integration of immigrants from SSA in Canada. His recent research focuses on understanding the African’s government response to Covid-19 in sub-Saharan Africa through the channel of Facebook data. He led the first SICSS in Africa in <a href=https://sicss.io/2018/capetown/' target='_blank'>2018</a> and <a href=https://sicss.io/2019/capetown/' target='_blank'>2019</a>.</p>"
+  website: https://www.mcgill.ca/popcentre/people-0/associate-members-0/visseho-adjiwanou
+
 - name: Diego Alburez-Gutierrez
   image: /assets/images/diego.JPG
   bio: "<p align='justify'>Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is a Research Scientist at the Max Planck Institute for Demographic Research, where he specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers).</p>"
