--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -19,4 +19,4 @@
   
   name: Jon Järviniemi
   image: /assests/images/JonJärviniemi.jpg
-  bio: "Jon Järviniemi is a doctoral researcher at the University of Helsinki. His research focuses on analyzing the developement of populist political communication across party lines and on different political arenas. Furthermore, he is interested in what may have triggered the usage of populist communication among political actors."
+  bio: "Jon Järviniemi is a doctoral researcher at the University of Helsinki. His research focuses on analyzing the development of populist political communication across party lines and on different political arenas. Furthermore, he is interested in what may have triggered the usage of populist communication among political actors."
