--- a/_data/2022/rochester/participants.yml
+++ b/_data/2022/rochester/participants.yml
@@ -1,1 +1,46 @@
-- name:
+- name: "Serdar Ciftci"
+  image: /assets/images/serdar_ciftci.jpeg
+  bio: "Serdar Çiftçi is an Assistant Professor in the Computer Engineering Department at Harran University. Serdar obtained his PhD in 2017 from the Middle East Technical University, with his thesis titled Visual Privacy Protection Using False Colors. During his PhD, he did some part of his research at École Polytechnique Fédérale de Lausanne (EPFL), Multimedia Signal Processing Group (MMSPG), as a visiting researcher. In 2017, the Middle East Technical University Prof. Dr. Mustafa Parlar Education and Research Foundation awarded him the Thesis of the Year Award for his PhD thesis. His research interests include deep-learning-based image processing studies such as image analysis, image enhancement, and high-dynamic-range imaging."
+  website: https://user.ceng.metu.edu.tr/~sciftci
+
+- name: "Guzel Garifullina"
+  image: /assets/images/guzel_garifullina.jpeg
+  bio: "Guzel Garifullina is a Postdoctoral Fellow at the Skalny Center for Polish and Central European Studies (University of Rochester). Her research interests include comparative political behavior and authoritarian governance with a focus on Russia. Her previous projects use a variety of methods, including lab and survey experiments. She has earned her PhD in Political Science at the University of North Carolina at Chapel Hill and will be joining the Center on Democracy, Development and the Rule of Law at Stanford University as a Postdoctoral Fellow this Fall."
+  website: http://guzelgarifullina.com/
+  
+- name: "Huanyu Chen"
+  image: /assets/images/huanyu_chen.jpeg
+  bio: "Huanyu Chen is currently a rising senior student at the University of Rochester pursuing a B.S. in mathematics and a B.A. in economics. She is interested in using computational techniques, especially data visualization and quantification, to address social problems and improve equity between diverse groups."
+  website: https://www.linkedin.com/in/huanyu-chen-5785151a1/
+  
+- name: "Lipeng Chen"
+  image: /assets/images/lipeng_chen.jpeg
+  bio: "Lipeng Chen is a doctoral student in economics at the University of Rochester. His work applies reduced-form causal inference methods to topics in development economics and economics of crime. Thus far, he has studied the socioeconomic impacts of Internet access and becomes interested in computational social science. He holds a Master’s degree from Fudan University and a Bachelor’s degree from Nanjing University, both in economics."
+  website: https://www.linkedin.com/in/lipeng-c-b84b63b9/
+  
+- name: "Moeed Baradaran"
+  image: /assets/images/moeed_baradaran.jpeg
+  bio: "Moeed Baradaran is a rising senior majoring in international relations and economics at the University of Rochester. Fluent in Persian, English, and familiar with Arabic, Spanish, and Serbo-Croatian, he worked as a translator for United Nations High Commission for Refugees (UNHCR) in Bosnia and Herzegovina. As a research assistant at The Washington Institute for Near East Policy, he is interested in understanding the implications of the sanctions and analysis required in understanding their impact." 
+  website: https://www.linkedin.com/in/moeed-baradaran/
+  
+- name: "Angel Hwang"
+  image: /assets/images/angel_hwang.jpeg
+  bio: "Angel Hsing-Chi Hwang’s research explores the role of emerging technology in the future of (team)work, culture, and human creativity. Through both quantitative and qualitative methods, she investigates how AI-empowered tools enhance innovation and team synergy at large scale on various platforms (e.g., virtual and mixed reality, text-based communication, and video chats), while addressing common challenges faced by marginalized individuals. "
+  website: https://angelhwang.github.io/
+
+- name: "Kepler Palacio-Soto"
+  image: /assets/images/kepler_palacio_soto.jpeg
+  bio: "Kepler Palacio-Soto is a third-year undergraduate at the University of Rochester pursuing a BS in Brain & Cognitive Sciences. His principal research interests include the neural correlates of social cognition and psychopathology, but he is also interested in leveraging big datasets for insights about social interactions, public mental health, and cultural dissolution. Currently, Kepler helps wrangle and analyze data for an ongoing study exploring the efficacy of varied cognitive reappraisal strategies in improving cardiovascular responses to social stress."
+  website: https://www.linkedin.com/in/kepler-palacio-soto-90192b1ab/
+  
+- name: "Kepler Palacio-Soto"
+  image: /assets/images/kepler_palacio_soto.jpeg
+  bio: "Kepler Palacio-Soto is a third-year undergraduate at the University of Rochester pursuing a BS in Brain & Cognitive Sciences. His principal research interests include the neural correlates of social cognition and psychopathology, but he is also interested in leveraging big datasets for insights about social interactions, public mental health, and cultural dissolution. Currently, Kepler helps wrangle and analyze data for an ongoing study exploring the efficacy of varied cognitive reappraisal strategies in improving cardiovascular responses to social stress."
+  website: https://www.linkedin.com/in/kepler-palacio-soto-90192b1ab/
+
+
+
+
+
+  
+  
