--- a/_data/2022/rochester/participants.yml
+++ b/_data/2022/rochester/participants.yml
@@ -19,7 +19,7 @@
   website: https://user.ceng.metu.edu.tr/~sciftci
   
 - name: "Theu Dinh"
-  image: /assets/images/theu_dinh.jpeg
+  image: /assets/images/theu_dinh.png
   bio: "Theu Dinh is a PhD candidate in Political Science at the University of Rochester. She studies American Politics and Political Methodology, with additional interests in Political Economy and Formal Theory. She is currently doing research on the politics of climate change. In a recent project, her co-author and she examine the effect of extreme weather events on support for climate action policies. She is also interested in understanding the political dynamics of the spread on social networks of misinformation about climate change. She has undergraduate training in Government, Business Management and Industrial Engineering."
   website: https://www.linkedin.com/in/theu-dinh-06908216/
 
@@ -74,6 +74,6 @@
   website: https://www.linkedin.com/in/kepler-palacio-soto-90192b1ab/
     
 - name: "Xixi Xiao"
-  image: /assets/images/xixi_xiao.jpeg
+  image: /assets/images/xixi_xiao.png
   bio: "I’m a PhD student in accounting at the University of Rochester. I am broadly interested in the effects of information transfer on real decisions, the effect of information intermediaries on capital markets and firm behavior, and managerial learning."
   website: https://simon.rochester.edu/stories/xixi-xiao
