--- a/_data/2022/rochester/participants.yml
+++ b/_data/2022/rochester/participants.yml
@@ -59,7 +59,7 @@
   website: https://www.linkedin.com/in/%E9%A2%A2%E5%A4%A9-%E6%9D%8E-467605221/
   
 - name: "Caio Malaquias"
-  image: /assets/images/caio_malaquias.jpeg
+  image: /assets/images/caio_malaquias.png
   bio: "Caio Malaquias is a masters student in Political Science at Federal University of Pernambuco (Brazil). Caio is interested in using analytical frameworks and methodologies to evaluate and suggest decision-making processes, specially in public policies. He works on data collection and analysis and utilizes quantitative methods to create evidence-based decisions in public policies as well as to study conflict/coalitional dynamics, especially in multiparty presidentialism in Latin America."
   website: https://caiomalaquias.github.io/
   
