--- a/_data/2022/korea/participants.yml
+++ b/_data/2022/korea/participants.yml
@@ -63,6 +63,10 @@
   image: /assets/images/miri_kim.png
   bio: Miri Kim is a Ph.D. candidate in economics at Korea university. Her research is focused on microeconometrics and panel data models both empirically and theoretically. She is also interested in utilizing big data and artificial intelligence in econometric analysis, especially in causal inference.
 
+- name: Jee Young Bhan
+  image: /assets/images/jeeyoung_bhan.png
+  bio: Jee Young Bhan (she/her) is a Ph.D. student in Sociology at the University of California - Davis. She studies the sociology of education and social stratification, with a focus on public education, policy, and neighborhood and community contexts. Specifically, she is interested in incorporating computational methods to understand cultural capital’s influence on student educational experiences and class reproduction.
+
 - name: Jisung Yoon 
   image: /assets/images/jisung_yoon.png
   bio: Jisung Yoon is Ph.D. Candidate in the industrial and management engineering at Pohang University of Science and Technology. After graduation, he will be joining the Kellogg School of Management at Northwestern University, and the Northwestern Institute on Complex Systems (NICO) as a Postdoctoral Fellow. His research focuses on the development and application of machine learning methods for network data, practically in the area of computational social science. In particular, I have been studying questions about innovation and human mobility in the concept of Science of Science.
