--- a/_data/2022/rochester/participants.yml
+++ b/_data/2022/rochester/participants.yml
@@ -58,6 +58,11 @@
   bio: "Haotian (Rick) Li is a Masters student at University of Rochester. His research interest includes behavior of online shoppers, especially for participants of emerging livestream shopping. He is also interested in investment choice of mutual/ hedge fund managers under pressure and how pressure influences decision making.  He receives Bachelors degree of Financial Economics and Statistics at University of Rochester.  Previously, he worked on machine learning algorithms of movie recommendation systems and market research of ScrewIT business plan at Ain Center of Entrepreneurship at University of Rochester."
   website: https://www.linkedin.com/in/%E9%A2%A2%E5%A4%A9-%E6%9D%8E-467605221/
   
+- name: "Zhaozhi Li"
+  image: /assets/images/zhaozhi_li.jpeg
+  bio: "Zhaozhi Li is currently a senior student at Duke Kunshan University and an incoming political science Ph.D. student at Washington University in St. Louis. Her substantive research interests span from political communication to environmental politics. Her current work studies how human mobility behaviors alter the risk perception of COVID-19 in American cities. For her works in methodology, she is interested in developing interpretable measurements of textual data for social science studies and GIS visualization tools for human mobility."
+  website: https://zl2137.wixsite.com/resume
+  
 - name: "Caio Malaquias"
   image: /assets/images/caio_malaquias.png
   bio: "Caio Malaquias is a masters student in Political Science at Federal University of Pernambuco (Brazil). Caio is interested in using analytical frameworks and methodologies to evaluate and suggest decision-making processes, specially in public policies. He works on data collection and analysis and utilizes quantitative methods to create evidence-based decisions in public policies as well as to study conflict/coalitional dynamics, especially in multiparty presidentialism in Latin America."
