--- a/_data/2022/korea/participants.yml
+++ b/_data/2022/korea/participants.yml
@@ -50,6 +50,10 @@
   image: /assets/images/haeun_choi.png  
   bio: Ha Eun is a PhD student in Political Science at Michigan State University. Her main research interests include gender and trade, public opinion on trade and economic policies, and international organizations. She is interested in using and learning more about computational methods including network and text analysis to understand the interdependencies and networks of various political actors as well as the diffusion of gender-related trade and economic policies across countries. 
 
+- name: Gayoung Kim 
+  image: /assets/images/gayoung_kim.png
+  bio: Gayoung Kim is an M.A. graduate in Sociology from Seoul National University and a research associate at Institute for Social Development and Policy, SNU. She is interested in political polarization and social cohesion in digitalized society. With a focus on quantitative methods and computational social science, Gayoung is currently exploring the cultural dynamics of gendered political and social conflicts in Korea.
+  
 - name: Kadir Jun Ayhan 
   image: /assets/images/kadir_ayhan.png
   bio: Kadir Jun Ayhan, Ph.D., is Assistant Professor of International Relations at Ewha Womans University Graduate School of International Studies. His main research interests include public diplomacy, power in world politics, and Korean foreign policy. Ayhan serves as Editor-in-Chief for Journal of Public Diplomacy. He has been serving as a member of the National Unity Committee under the Korean President(-elect) since April 2022. Ayhan regularly consults for governmental public diplomacy projects in Korea. He holds a Ph.D. (2016) and M.I.S. (2010) from Seoul National University Graduate School of International Studies and a Bachelor of Commerce (2008) from The University of Auckland. He has published articles in International Studies Perspectives, Korea Observer, Politics & Policy, and Place Branding and Public Diplomacy, among others.
