--- a/_data/2022/ndsu/speakers.yml
+++ b/_data/2022/ndsu/speakers.yml
@@ -7,4 +7,9 @@
   image: /assets/images/saifshahin.png
   bio: "Saif Shahin is an Assistant Professor of Digital Culture at Tilburg University in the Netherlands. His scholarship looks at data and technology as sociocultural phenomena, power in digital social networks, and the politics of online identity construction. He regularly employs computational methods in his research, including natural language processing, topic modeling, sentiment analysis, and network analysis — often in conjunction with qualitative techniques. His award-winning research has been featured in flagship journals in communication, sociology, and systems science. He also serves as Associate Editor of the Journal of Information Technology & Politics."
   website: https://saifshahin.wordpress.com
+
+- name: Tian Yang, Ph.D.
+  image: /assets/images/penn2022_Tian.jpg
+  bio: "Tian Yang just received his Ph.D. from the Annenberg School for Communication at the University of Pennsylvania. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
+  website: https://www.asc.upenn.edu/people/graduate-student/tian-yang
   
