--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -1,3 +1,37 @@
+- date: All times are in Central Standard Time (CST); *Schedule is tentative. More details coming soon...*
+
 - date: June 19, 2022
-  events:
-    - name: "Schedule coming soon..."
+  name: Welcoming Dinner
+
+- date: June 20, 2022 
+  name: Introduction & Ethics
+  
+- date: June 21, 2022 
+  name: Collecting Digital Trace Data
+  
+- date: June 22, 2022 
+  name: Natural Language Processing  
+  
+- date: June 23, 2022 
+  name: Network Analysis   
+  
+- date: June 24, 2022 
+  name: Data Visualization 
+  
+- date: June 25, 2022 
+  name: Day Off
+  
+- date: June 26, 2022 
+  name: Day Off  
+  
+- date: June 27, 2022 
+  name: Supervised Machine Learning I & HPC Computing
+
+- date: June 28, 2022 
+  name: Supervised Machine Learning II 
+
+- date: June 29, 2022 
+  name: Unsupervised Machine Learning
+
+- date: June 30, 2022 
+  name: Group Presentation Day
