add projects to sidebar

--- a/_data/2022/rutgers/sidebar.yml
+++ b/_data/2022/rutgers/sidebar.yml
@@ -4,5 +4,7 @@
   url: "pre_arrival"
 - name: People
   url: "people"
+- name: Past SICSS-Rutgers Group Projects
+  url: "projects"
 - name: Schedule & Materials
   url: "schedule"
