--- a/_data/2022/rochester/participants.yml
+++ b/_data/2022/rochester/participants.yml
@@ -74,7 +74,7 @@
   website: https://www.linkedin.com/in/miguelnovovillar/
   
 - name: "Duy Pham"
-  image: /assets/images/duy_pham.jpeg
+  image: /assets/images/duy_pham.png
   bio: "Duy Pham is a recent graduate at the University of Rochester - majoring in Data Science, Mathematics, and Economics. He seeks to apply Machine Learning methods in forecasting complex economic indicators and financial assets."
   website: https://www.linkedin.com/in/duy-pham-a8386719b/
   
