--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -143,7 +143,7 @@ lunchtime talks:
     - name: MITRE Social Justice
       image: /assets/images/MITRE.png
       bio: "The Social Justice Platform provides resources, data, tools, and frameworks that empower decision makers to create and sustain equitable solutions that bring positive change for a more just society. Our resources and insights are aimed at those looking to make a difference at the federal, state, and local levels."
-      website: https://sjp.mitre.org/
+      website: https://www.mitre.org/
    
     - name: Research Data Management Team, UC Berkeley
       image: /assets/images/Research_Data_Management.png
