--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -20,7 +20,7 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:15 A Discussion of *Black Faces in High Spaces* with authors Dr. Randal Pinkett and Dr. Jeffrey Robinson (*Zoom*)"
     - name: "2:15 - 2:30 Break"
-    - name: "2:30 - 5:30 R Workship (*Zoom*)"
+    - name: "2:30 - 5:30 R Workshop (*Zoom*)"
 
 
 - date: 2022-06-19
@@ -43,6 +43,7 @@
           **Review Pre-arrival materials**
           
           
+          
                 - [Bootcamp](https://sicss.io/boot_camp/)
               
                 - [Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments](https://sicss.io/curriculum)
@@ -52,6 +53,7 @@
     
         
           **Get to know the SICSS & SICSS-Howard/Mathematica Planning Team**
+          
           
                   
                 - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [(video)](https://youtu.be/PGhI39loSYg)
@@ -67,6 +69,7 @@
    
                   
           **Changing the Game**
+          
           
           
                - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [(video)](https://youtu.be/FYES4RCRaZw)
