--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -16,3 +16,7 @@
   image: /assests/images/jan_sodoge.jpg
   bio: "Jan Sodoge is a doctoral researcher at the Helmholtz-Centre for Environmental Research working on the socio-economic dimensions of drought through text mining and participatory modeling"
   website: http://jsodoge.eu
+
+- name: Elida Izani
+  image: /assets/images/Elida_Izani.jpg
+  bio: "Elida Izani is a doctoral student in the Sociology department at Stockholm University. Her research focuses on the alignment between ideological beliefs and lifestyle preferences. She investigates this topic by using a combination of qualitative and computational methods."
