Maria Litova: bio and image

--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -16,3 +16,7 @@
   image: /assests/images/jan_sodoge.jpg
   bio: "Jan Sodoge is a doctoral researcher at the Helmholtz-Centre for Environmental Research working on the socio-economic dimensions of drought through text mining and participatory modeling"
   website: http://jsodoge.eu
+
+- name: Maria Litova
+  image: /assests/images/Maria_Litova.jpg
+  bio: "Maria Litova is a research assistant at the Centre for Social Data Science, University of Helsinki, Finland. She got her first Master’s degree in Sociology and currently is a Master’s student at the University of Helsinki with major in Social Data Science. Maria is interested in natural language processing, machine learning, healthcare and medical data analysis, youth research and well-being issues."
