--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -1,3 +1,121 @@
-- date: All times are in Eastern Daylight Time
+- date: 2022-06-19
   events:
-    - name: "Schedule coming soon..."
+    - name: "Check In and Welcome Dinner (*Not open to public/No livestream*)"
+
+- date: 2022-06-20
+  name: Introduction and Ethics
+  events:
+    - name: "9:00 - 9:15 Logistics (*Not open to public/No livestream*)"
+    - name: "9:15 - 9:30 Introductions (*Not open to public/No livestream*)"
+    - name: "9:30 - 11:00 Speaker 1: Casey Fiesler (University of Colorado Boulder)"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Casey Fiesler continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Exercises"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Exercises"
+    - name: "4:30 - 5:00 Wrap Up"
+
+- date: 2022-06-21
+  name: Digital Trace Data
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 10:30 Speaker 1: Suhem Parack (Twitter)"
+    - name: "10:30 - 10:45 Coffee Break"
+    - name: "10:45 - 12:00 Speaker 2: Ridhi Kashyap (Oxford University)"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Exercises"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Exercises"
+    - name: "4:30 - 5:00 Wrap Up"
+
+- date: 2018-06-22
+  name: Text as Data
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 10:30 Speakers: Justin Grimmer (Stanford University) & Brandon Stewart (Princeton University)"
+    - name: "10:30 - 10:45 Coffee Break"
+    - name: "10:45 - 12:00 Justin Grimmer & Brandon Stewart continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Exercises"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Exercises"
+    - name: "4:30 - 5:00 Wrap Up"
+
+- date: 2018-06-23
+  name: Experiments in the Digital Era
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 11:00 Speaker 1: Chris Bail (Duke University)"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Chris Bail continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Exercises"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Exercises"
+    - name: "4:30 - 5:00 Wrap Up"
+
+- date: 2018-06-24
+  name: Topic TBD
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 9:30 Speaker Introductions"
+    - name: "9:30 - 11:00 Speaker"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Speaker Continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Exercises"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Exercises"
+    - name: "4:30 - 5:00 Wrap Up"
+
+- date: 2018-06-25
+  name: Day Off
+
+- date: 2018-06-26
+  name: Day Off
+
+- date: 2018-06-27
+  name: Project Development
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 9:30 Introduction to Research Speed Dating Activity"
+    - name: "9:30 - 11:00 Research Speed Dating"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Research Speed Dating Continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Project Group Formation"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Project Work"
+    - name: "4:30 - 5:00 Wrap Up"
+    
+- date: 2018-06-28
+  name: Project Development
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 11:00 Group Projects Work"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Group Projects Work Continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Projects Work"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Project Work"
+    - name: "4:30 - 5:00 Wrap Up"
+    
+- date: 2018-06-28
+  name: Project Development
+  events:
+    - name: "9:00 - 9:15 Check In"
+    - name: "9:15 - 11:00 Group Projects Work"
+    - name: "11:00 - 11:15 Coffee Break"
+    - name: "11:15 - 12:00 Group Projects Work Continued"
+    - name: "12:00 - 1:00 Lunch"
+    - name: "1:00 - 2:30 Group Project Final Presentations"
+    - name: "2:30 - 3:00 Break"
+    - name: "3:00 - 4:30 Group Project Final Presentations"
+    - name: "4:30 - 5:00 Wrap Up"
+    - name: "5:00 - 7:00 Farewell Dinner"
+  
+- date: 2018-06-30
+  events:
+    - name: "Participants depart"
