--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -14,12 +14,7 @@ faculty:
 
 opening:
   title: Opening Plenary Speaker 
-  people:
-    - name: Wayne A. I. Frederick, M.D., MBA, F.A.C.S. 
-      image: 
-      bio: "Dr. Wayne A. I. Frederick was appointed the seventeenth president of Howard University in 2014. He previously served as Provost and Chief Academic Officer.  Most recently, the Howard University Board of Trustees selected Dr. Frederick to serve as the distinguished Charles R. Drew Professor of Surgery. A distinguished scholar and administrator, Dr. Frederick has advanced Howard University's commitment to student opportunity, academic innovation, public service, and fiscal stability. Early in his tenure as president, Dr. Frederick pursued initiatives to streamline and strengthen university operations. He has overseen a series of reform efforts, including the expansion of academic offerings, establishing innovative programs to support student success and the modernization of university facilities. As an undergraduate, Dr. Frederick was admitted to Howard University's B.S./M.D. dual degree program. He completed the requirements for both degrees in six years, allowing him to earn his Bachelor of Science degree and his medical degree by the age of 22. He also earned a Master of Business Administration from Howard University's School of Business in 2011. Following his post-doctoral research and surgical oncology fellowships at the University of Texas MD Anderson Cancer Center, Dr. Frederick began his academic career as associate director of the Cancer Center at the University of Connecticut. Upon his return to Howard University, his academic positions included associate dean in the College of Medicine, division chief in the Department of Surgery, director of the Cancer Center and deputy provost for Health Sciences." 
-      website: https://www2.howard.edu/about/president
-      
+  people:   
     - name: Anthony K. Wutoh, Ph.D., R.Ph.
       image: /assets/images/Anthony_K_Wutoh.jpg
       bio: "Anthony K. Wutoh, Ph.D., R.Ph. is the Provost of Howard University. He previously served in various roles at the University including as Dean of theCollege of Pharmacy and Assistant Provost for International Programs. Dr. Wutoh has also served as Director for the Center for Minority Health Services Research, and the Center of Excellence. Dr. Wutoh received a Bachelor of Arts degree in Biochemistry from the University of Maryland Baltimore County in 1987. He then completed a Bachelor of Science in Pharmacy, and Doctor of Philosophy in Pharmacy Administration (Pharmacoepidemiology) at the University of Maryland, Baltimore School of Pharmacy. Dr. Wutoh has varied research interests including pharmacoepidemiology, international health, health services/outcomes research, and evaluation of large population databases, particularly in the area of AIDS and HIV infection in older patients. Dr. Wutoh has received over $50 million dollars in grant funding from several sources including; NIH, CDC, USAID, HRSA, AHRQ and foundations, and has published numerous research articles on HIV disease, medication adherence, disease state management, and various other topics in respected research journals, including; the Journal of the American Medical Association, Health Services Research, AIDS & Behavior, the Journal of the National Medical Association, and the Journal of the American Pharmacists Association."
@@ -140,9 +135,9 @@ lunchtime talks:
       bio: "The goal of harkness.ai is to improve interpersonal dynamics and communication in meetings whether they are hosted virtually or in person. Through machine learning algorithms and data visualization, we can empower facilitators to have better, more effective meetings that push the organization forward with confidence."
       website: https://www.harkness.ai/
       
-    - name: MITRE Social Justice
+    - name: MITRE
       image: /assets/images/MITRE.png
-      bio: "The Social Justice Platform provides resources, data, tools, and frameworks that empower decision makers to create and sustain equitable solutions that bring positive change for a more just society. Our resources and insights are aimed at those looking to make a difference at the federal, state, and local levels."
+      bio: "At MITRE, we solve problems for a safer world. Through our federally funded R&D centers and public-private partnerships, we work across government to tackle challenges to the safety, stability, and well-being of our nation."
       website: https://www.mitre.org/
    
     - name: Research Data Management Team, UC Berkeley
